--- a/roles/kvm-guest-qcow2/defaults/main.yml
+++ b/roles/kvm-guest-qcow2/defaults/main.yml
@@ -30,7 +30,10 @@ runcmd:
   - systemctl stop network && systemctl start network
   - /usr/bin/localectl set-keymap es
   - sed -i s/ONBOOT=no/ONBOOT=yes/g /etc/sysconfig/network-scripts/ifcfg-eth0
+  - sed -i s/PEERDNS=yes/PEERDNS=no/g /etc/sysconfig/network-scripts/ifcfg-eth0
+  - echo dns=none >> /etc/NetworkManager/NetworkManager.conf
   - systemctl stop network && systemctl start network
+  - echo nameserver 192.168.122.1 >> /etc/resolv.conf
   - yum -y remove cloud-init
 
 packages:
