--- a/resolv_ipa.yml
+++ b/resolv_ipa.yml
@@ -4,6 +4,8 @@
   gather_facts: yes
   become: yes
   become_method: sudo
+  vars:
+    ansible_ssh_pipelining: no
   roles:
     - role: "etc_resolv"
       resolv_nameservers:
