--- a/roles/etc_resolv/tasks/main.yml
+++ b/roles/etc_resolv/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Configure resolv.conf"
-  template:
+  ansible.builtin.template:
     src: "resolv.conf.j2"
     dest: "/etc/resolv.conf"
     mode: "0644"
