--- a/vm_vars/aapstdalone.yaml
+++ b/vm_vars/aapstdalone.yaml
@@ -1,6 +1,9 @@
 ---
 os_image: "/mnt/images/rhel-9.3-x86_64-kvm.qcow2"
 disk_size: "10G"
+vm_rhel_repos:
+  - rhel-9-for-x86_64-appstream-rpms
+  - rhel-9-for-x86_64-baseos-rpms
 ## VM definition
 guests:
   aapstdalone:
