--- a/roles/kvm-guest-qcow2/defaults/main.yml
+++ b/roles/kvm-guest-qcow2/defaults/main.yml
@@ -29,7 +29,9 @@ timezone: "Europe/Madrid"
 runcmd:
   - systemctl stop network && systemctl start network
   - /usr/bin/localectl set-keymap es
-  - sed -i s/ONBOOT=no/ONBOOT=yes/g /etc/sysconfig/network-scripts/ifcfg-eth0
+  # - sed -i s/ONBOOT=no/ONBOOT=yes/g /etc/sysconfig/network-scripts/ifcfg-eth0
+  - /usr/bin/nmcli con mod 'System eth0' connection.autoconnect true ipv4.ignore-auto-dns true
+  - /usr/bin/nmcli con up 'System eth0'
   - sed -i s/PEERDNS=yes/PEERDNS=no/g /etc/sysconfig/network-scripts/ifcfg-eth0
   - echo dns=none >> /etc/NetworkManager/NetworkManager.conf
   - systemctl stop network && systemctl start network
