--- a/inventory.yaml
+++ b/inventory.yaml
@@ -5,10 +5,10 @@ local:
             ansible_connection: local
 rhn:
     hosts:
-        aapstdalone:
+        satellite:
             ansible_connection: ssh
-            ansible_ssh_host: 192.168.122.10
-            ansible_ssh_private_key_file: ~/.ssh/pgoku.key.pub
+            ansible_ssh_host: 192.168.122.100
+            ansible_ssh_private_key_file: ~/.ssh/pgoku.key
             ansible_ssh_user: pgoku
 
 ...
