--- a/rhn_register.yml
+++ b/rhn_register.yml
@@ -33,8 +33,8 @@
         - vim-enhanced
         - nmap
         - net-tools
-        #- ansible
-        #- git
+       # - ansible
+        - git
         - bind-utils
         - wget 
         - yum-utils 
@@ -47,4 +47,4 @@
         - lvm2
         #- docker
 
-# - ansible.builtin.import_playbook: resolv_ipa.yml
+- ansible.builtin.import_playbook: resolv_ipa.yml
