--- a/roles/etc_resolv/tasks/main.yml
+++ b/roles/etc_resolv/tasks/main.yml
@@ -5,3 +5,9 @@
     dest: "/etc/resolv.conf"
     mode: "0644"
   become: True
+- name: "Configure the nmcli connection"
+  community.general.nmcli:
+    conn_name: "System eth0"
+    dns4: "{{ resolv_nameservers }}"
+    dns4_search: "{{ resolv_domain }}"
+    state: present
