--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -67,7 +67,7 @@
                                             'ansible_ssh_host': current_guest.value.address,
                                             'ansible_connection': 'ssh',
                                             'ansible_ssh_user': useransible,
-                                            'ansible_ssh_private_key_file': ssh_key_file + '.pub'
+                                            'ansible_ssh_private_key_file': ssh_key_file
                                           }
                                         }
                                       }
