--- a/vm_vars/test.yaml
+++ b/vm_vars/test.yaml
@@ -1,21 +1,21 @@
 ---
 os_image: "/mnt/images/rhel-9.3-x86_64-kvm.qcow2"
-disk_size: "20G"
+disk_size: "10G"
 vm_rhel_repos:
   - rhel-9-for-x86_64-appstream-rpms
   - rhel-9-for-x86_64-baseos-rpms
 ## VM definition
 guests:
-  aapstdalone:
-    fqdn: aapstdalone.bcnconsulting.com
-    mem: 8192
-    cpus: 4
+  test:
+    fqdn: test.bcnconsulting.com
+    mem: 2048
+    cpus: 1
     os_type: "rhel9.3"
     file_type: "qcow2"
     pnetwork: "virbr0"
     model: virtio
     graphics: spice
-    address: 192.168.122.10
+    address: 192.168.122.11
     network: 192.168.122.0
     netmask: 255.255.255.0
     broadcast: 192.168.122.255
