prepare to let skip the next steps and allow to run them independently

--- a/kvm.yml
+++ b/kvm.yml
@@ -42,3 +42,4 @@
       guests: "{{ guest_list }}"
 
 - ansible.builtin.import_playbook: rhn_register.yml
+  when: skip_rhn_register is not defined or not (skip_rhn_register | bool)
