--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
 - debug:
     msg:
-      - "{{ lookup('pipe', 'hostnamectl') }}"
+      - "{{ lookup('pipe', 'hostname') }}"
+      - "{{ lookup('pipe', 'ip -br a') }}"
       - "{{ lookup('pipe', 'id ' + dir_owner) }}"
 - name: "Create VM directory"
   ansible.builtin.file:
