--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - debug:
     msg:
-      - "{{ lookup('pipe', 'hostname') }}"
-      - "{{ lookup('pipe', 'ip -br a') }}"
-      - "{{ lookup('pipe', 'id ' + dir_owner) }}"
+      - "{{ lookup('pipe', '/usr/bin/hostname') }}"
+      - "{{ lookup('pipe', '/usr/sbin/ip -br a') }}"
+      - "{{ lookup('pipe', '/usr/bin/id ' + dir_owner) }}"
 - name: "Create VM directory"
   ansible.builtin.file:
     path: '{{ vm_location }}/{{ item.key }}'
