--- a/kvm.yml
+++ b/kvm.yml
@@ -7,7 +7,7 @@
   environment:
     LIBGUESTFS_BACKEND: direct
   vars:
-    ssh_key_file: "~/.ssh/pgoku.key"
+    ssh_key_file: "~pgoku/.ssh/pgoku.key"
   roles:
     - role: kvm-guest-qcow2
       ### Variables
