--- a/inventory.yaml
+++ b/inventory.yaml
@@ -1,14 +1,17 @@
 ---
 local:
-    hosts:
-        localhost:
-            ansible_connection: local
+  hosts:
+    localhost:
+      ansible_connection: local
+pgoku:
+  hosts:
+    pgoku:
+      ansible_connection: local
 rhn:
-    hosts:
-        satellite:
-            ansible_connection: ssh
-            ansible_ssh_host: 192.168.122.100
-            ansible_ssh_private_key_file: ~/.ssh/pgoku.key
-            ansible_ssh_user: pgoku
-
+  hosts:
+    satellite:
+      ansible_connection: ssh
+      ansible_ssh_host: 192.168.122.100
+      ansible_ssh_private_key_file: ~/.ssh/pgoku.key
+      ansible_ssh_user: pgoku
 ...
