--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -24,6 +24,11 @@
                gateway {{ item.value.gateway }}
   with_dict: "{{ guests }}"
 
+- debug:
+    msg:
+      - "{{ lookup('ansible.builtin.env', 'HOSTNAME') }}"
+      - "{{ lookup('ansible.builtin.env', 'USERNAME') }}"
+      - "{{ lookup('ansible.builtin.env') }}"
 - name: "Generate template for user-data"
   ansible.builtin.template:
     src: "user-data.j2"
