--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -28,7 +28,8 @@
     msg:
       - "{{ lookup('ansible.builtin.env', 'HOSTNAME') }}"
       - "{{ lookup('ansible.builtin.env', 'USERNAME') }}"
-      - "{{ lookup('ansible.builtin.env') }}"
+      - "{{ lookup('ansible.builtin.pipe', 'env') }}"
+
 - name: "Generate template for user-data"
   ansible.builtin.template:
     src: "user-data.j2"
