--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -31,7 +31,7 @@
   loop: "{{ ssh_keys }}"
   loop_control:
     loop_var: current_key
-- debug: var=current_key
+- debug: var=keys_stats
 - name: "Load the public ssh keys if present in the running server"
   ansible.builtin.set_fact:
     ssh_keys_contents: "{{ (ssh_keys_contents | default([])) + [lookup('file', current_key_item + '.pub'] }}"
@@ -43,12 +43,13 @@
 - name: "Get the public ssh keys from pgoku if they are not present in local"
   ansible.builtin.slurp:
     src: "{{ current_remote_key_item }}"
-  register: sluped_keys
+  register: slurped_keys
   ignore_errors: true
   loop: "{{ ssh_keys }}"
   loop_control:
     loop_var: current_remote_key_item
 - debug: var=slurped_keys
+
 - name: "Generate template for user-data"
   ansible.builtin.template:
     src: "user-data.j2"
