--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -26,29 +26,20 @@
 
 - name: "Check if the public keys are in the running server"
   ansible.builtin.stat:
-    path: "{{ current_key }}"
+    path: "{{ ssh_key }}"
   register: keys_stats
-  loop: "{{ ssh_keys }}"
-  loop_control:
-    loop_var: current_key
 - debug: var=keys_stats
 - name: "Load the public ssh keys if present in the running server"
   ansible.builtin.set_fact:
-    ssh_keys_contents: "{{ (ssh_keys_contents | default([])) + [lookup('file', current_key_item + '.pub'] }}"
+    ssh_key_contents: "{{ (ssh_key_contents | default([])) + [lookup('file', ssh_key + '.pub'] }}"
   ignore_errors: true
-  loop: "{{ ssh_keys }}"
-  loop_control:
-    loop_var: current_key_item
 
 - name: "Get the public ssh keys from pgoku if they are not present in local"
   ansible.builtin.slurp:
-    src: "{{ current_remote_key_item }}"
-  register: slurped_keys
+    src: "{{ ssh_key }}"
+  register: slurped_key
   ignore_errors: true
-  loop: "{{ ssh_keys }}"
-  loop_control:
-    loop_var: current_remote_key_item
-- debug: var=slurped_keys
+- debug: var=slurped_key
 
 - name: "Generate template for user-data"
   ansible.builtin.template:
