--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -24,21 +24,21 @@
                gateway {{ item.value.gateway }}
   with_dict: "{{ guests }}"
 
-- name: "Check if the public keys are in the running server"
-  ansible.builtin.stat:
-    path: "{{ ssh_key }}"
-  register: key_stat
-
-- name: "Load the public ssh keys if present in the running server"
-  ansible.builtin.set_fact:
-    ssh_key_contents: "{{ lookup('file', ssh_key) }}"
-  when: key_stat.stat.exists
+# - name: "Check if the public keys are in the running server"
+#   ansible.builtin.stat:
+#     path: "{{ ssh_key }}"
+#   register: key_stat
+# 
+# - name: "Load the public ssh keys if present in the running server"
+#   ansible.builtin.set_fact:
+#     ssh_key_contents: "{{ lookup('file', ssh_key) }}"
+#   when: key_stat.stat.exists
 
 - name: "Get the public ssh keys from pgoku if they are not present in local"
   ansible.builtin.slurp:
     src: "{{ ssh_key }}"
   register: slurped_key
-  when: not key_stat.stat.exists
+#   when: not key_stat.stat.exists
 - debug: var=slurped_key
 
 - name: "Generate template for user-data"
@@ -47,7 +47,7 @@
     dest: '{{ vm_location }}//{{ item.key }}/user-data'
     mode: 0777
   vars:
-    current_ssh_key: "{{ slurped_key.content | default(ssh_key_contents) }}"
+    current_ssh_key: "{{ slurped_key.content }}"
   with_dict: "{{ guests }}"
 
 - name: "Insert hostname to user-data before preserve_hostname"
