--- a/ping.yaml
+++ b/ping.yaml
@@ -5,10 +5,10 @@
   tasks:
     - name: "Create the dynamic inventory"
       ansible.builtin.add_host:
-        hostname: "{{ current_vm_item }}"
+        hostname: "{{ current_vm_item.name }}"
         ansible_ssh_user: "pgoku"
         ansible_ssh_private_key_file: "/home/pgoku/.ssh/pgoku.key"
-        # ansible_ssh_host: '{{ inventory_hostname }}'
+        ansible_ssh_host: '{{ current_vm_item.ip }}'
         # ansible_ssh_port: '{{ new_port }}'
       loop: "{{ vms_to_check }}"
       loop_control:
