--- a/roles/kvm-guest-qcow2/tasks/main.yml
+++ b/roles/kvm-guest-qcow2/tasks/main.yml
@@ -290,3 +290,15 @@
   loop_control:
     loop_var: current_guest
 
+- name: "Temporary variable for output artifacts"
+  ansible.builtin.set_facts:
+    __tmp_stat: "{{ (__tmp_stat | default([]) + [{'name': current_guest_to_stat.value.fqdn, 'ip': current_guest_to_stat.value.address}] }}"
+  loop: "{{ guests | dict2items }}"
+  loop_control:
+    loop_var: current_guest_to_stat
+
+- name: "Generate the output artifacts"
+  ansible.builtin.set_stats:
+    data:
+      vms_to_check: "{{ __tmp_stat }}"
+
