--- a/ping.yaml
+++ b/ping.yaml
@@ -6,6 +6,7 @@
     - name: "Create the dynamic inventory"
       ansible.builtin.add_host:
         hostname: "{{ current_vm_item.name }}"
+        groups: "vms_to_check"
         ansible_ssh_user: "pgoku"
         ansible_ssh_private_key_file: "/home/pgoku/.ssh/pgoku.key"
         ansible_ssh_host: '{{ current_vm_item.ip }}'
@@ -14,7 +15,7 @@
       loop_control:
         loop_var: current_vm_item
 
-- hosts: all,!local,!pgoku,!rhn
+- hosts: vms_to_check
   gather_facts: false
   tasks:
     - name: "Run the ansible ping"
