--- a/inventory.yaml
+++ b/inventory.yaml
@@ -9,15 +9,9 @@ pgoku:
             ansible_connection: local
 rhn:
     hosts:
-        rhde-server:
+        capsule1:
             ansible_connection: ssh
-            ansible_ssh_host: 192.168.122.113
+            ansible_ssh_host: 192.168.122.101
             ansible_ssh_private_key_file: /home/pgoku/.ssh/pgoku.key
             ansible_ssh_user: pgoku
-        rhde-device:
-            ansible_connection: ssh
-            ansible_ssh_host: 192.168.122.114
-            ansible_ssh_private_key_file: /home/pgoku/.ssh/pgoku.key
-            ansible_ssh_user: pgoku
-
 ...
