--- a/roles/rhn-subscription/tasks/main.yml
+++ b/roles/rhn-subscription/tasks/main.yml
@@ -20,6 +20,7 @@
     state: present
     username: "{{ rhn_user | default(satellite_username) | default(omit) }}"
     password: "{{ rhn_pwd | default(satellite_password) | default(omit) }}"
+    force_register: "{{ register_rhn | boolean }}"
     # pool_ids: "{{ [rhn_pool_name] | default([]) }}"
   when: ansible_distribution == 'RedHat' and register_rhn and subscription_status != 'Current'
 
